--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<!--    This line is added just now-->
+      <img src="favicon.png" />
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
