--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
   <title>myportfolio</title>
   <link rel="manifest" href="manifest.json">
+  	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <!--    This line is added just now-->
-      <img src="favicon.png" />
+      <img src="favicon.png" class="center"/>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
