--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="myportfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
   <title>myportfolio</title>
   <link rel="manifest" href="manifest.json">
