--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <img src="flutter-logo.png" class="center"  />
+  <img src="flutter-logo.PNG" class="center"  />
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
