--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <img src="flutter-logo.png" class="center"/>
+  <img src="loading_gif.gif" class="center"/>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
