--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <img src="loading_gif_water.gif" class="center" width="240" height="auto"/>
+  <img src="loading_gif_water.gif" class="center" />
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
+width="240" height="auto"
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
     var serviceWorkerVersion = '1444527540';
