--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-    <img src="loading_gif.gif" class="center" width="240" height="auto"/>
+    <img src="loading_gif.gif" class="center"/>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
