--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-    <img src="loading_gif.gif" class="center"/>
+  <div class="container">
+    <img src="loading_gif.gif"/>
+  </div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
