--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <div class="container">
-    <img src="loading_gif.gif"/>
+  <div style="
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;"
+  >
+   <img src="loading_gif_water.gif" style="
+    max-width: 100%; 
+    max-height: 100%;"
+    >
   </div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
