--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     align-items: center;
     height: 100vh;"
   >
-   <img src="loading_gif_water.gif" style="
+   <img src="loading_gif.gif" style="
     max-width: 100%; 
     max-height: 100%;"
     >
